--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">ZzrLearnApp</string>
-
-
-
+    <string name="openOtherActivity">Simulation opens other activity</string>
 
     <!--Grafika-->
     <string name="workJobName_text">Working&#8230;</string>
@@ -18,6 +16,9 @@
         Copyright 2013-2014 Google Inc.  All rights reserved.</string>
     <string name="title_activity_play_movie">Play Video (TextureView)</string>
     <string name="title_activity_continuous_capture">Continuous Capture (SurfaceView)</string>
+    <string name="title_activity_double_decode">Double Decode (TextureView)</string>
+    <string name="title_activity_hardware_scaler">Hardware scaler (SurfaceView)</string>
+
     <string name="play_button_text">Play</string>
     <string name="stop_button_text">Stop</string>
     <string name="locked60fps_checkbox">Play at 60fps</string>
@@ -28,4 +29,17 @@
     <string name="nowSaving">" [saving]"</string>
     <string name="recordingSucceeded">Recording succeeded</string>
     <string name="recordingFailed">Recording FAILED (err=%1$d)</string>
+
+    <string name="viewSizeLabel">Initial view size:</string>
+    <string name="flatShaded">flat shaded</string>
+    <string name="surfaceSizeTiny">[tiny]</string>
+    <string name="surfaceSizeSmall">[small]</string>
+    <string name="surfaceSizeMedium">[medium]</string>
+    <string name="surfaceSizeFull">[full]</string>
+
+    <string name="glTextureViewCaption">GLES rendered into a TextureView</string>
+    <string name="toggleReleaseCallbackOff">Toggle release (now: ST callback)</string>
+    <string name="toggleReleaseCallbackOn">Toggle release (now: renderer)</string>
+    <string name="title_activity_textureview_gl">Renders with GL as quickly as possible</string>
+
 </resources>
